--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,10 +11,7 @@ logging.level.org.springframework = info
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 
-# multipart ??
-spring.servlet.multipart.enabled=true
-spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size= 10MB
+spring.servlet.multipart.max-file-size= 1MB
 
-# ?? ?? ??
-profileImg.path = C:/????/profile_imgs/
-post.path = D:/????/upload/
+profileImg.path = C:/Users/82105/forprojectprofile
